--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dynamic = ["version"]
 requires-python = ">=3.6"
 
 [project.optional-dependencies]
-lint = ["flake8", "flake8-import-order"]
+lint = ["ruff"]
 test = ["pytest"]
 
 [build-system]
