--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -1,7 +1,7 @@
 name: Linter
 on: [ push, pull_request ]
 jobs:
-  ruff:
+  lint-ruff:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
