--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,17 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
-    hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: v0.0.263
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.5.0
   hooks:
-    - id: ruff
+  - id: trailing-whitespace
+  - id: end-of-file-fixer
+    exclude: "^.*drawio|.*.svg$"
+  - id: check-yaml
+  - id: check-added-large-files
+- repo: https://github.com/charliermarsh/ruff-pre-commit
+  rev: v0.1.0
+  hooks:
+  - id: ruff
+- repo: https://github.com/psf/black-pre-commit-mirror
+  rev: 23.10.0
+  hooks:
+  - id: black
