--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install .
-        python -m pip install pytest pytest-xdist
+        python -m pip install ".[test]"
     - name: Test with pytest
       run: |
-        pytest -n 2
+        pytest -n 1
