--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,10 +8,7 @@ repos:
   - id: check-yaml
   - id: check-added-large-files
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.1.0
+  rev: v0.3.4
   hooks:
   - id: ruff
-- repo: https://github.com/psf/black-pre-commit-mirror
-  rev: 23.10.0
-  hooks:
-  - id: black
+  - id: ruff-format
