--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,3 +38,7 @@ select = ["E", "F", "UP", "I", "B"]
 
 [tool.ruff.lint.isort]
 force-single-line = true
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+addopts = "-v"
