--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,6 +16,8 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Set OPENALEX_API_KEY from secret
+      run: echo "OPENALEX_API_KEY=${{ secrets.OPENALEX_API_KEY }}" >> $GITHUB_ENV
     - name: Install package and dependencies
       run: |
         python -m pip install --upgrade pip
