added a few options to cli, added response validation

--- a/examples/what_topic_does_top100_australian_funders_fund/Makefile
+++ b/examples/what_topic_does_top100_australian_funders_fund/Makefile
@@ -1,17 +1,17 @@
-au_funders.json:
-	pyalex funders --country AU --limit 100 --json $@
+funders.json:
+	pyalex funders --country AU --sample 5 --json $@
 
-au_funded_works.json: au_funders.json
-	cat au_funders.json | jq 'map(.id) | unique | join(",")' | xargs pyalex works --json $@ --funder-ids
+funded_works.json: funders.json
+	cat funders.json | jq 'map(.id) | unique | join(",")' | xargs pyalex works --json $@ --year 2025 --all --funder-ids
 
-au_funded_topics.json: au_funded_works.json
-	cat au_funded_works.json | jq '.[].primary_topic.display_name' > $@
+funded_topics.json: funded_works.json
+	cat funded_works.json | jq '.[].primary_topic.display_name' > $@
 
-wordcloud.png: au_funded_topics.json
-	wordcloud_cli --text au_funded_topics.json --imagefile $@
+wordcloud.png: funded_topics.json
+	wordcloud_cli --text funded_topics.json --imagefile $@
 
-all: au_funders.json au_funded_works.json au_funded_topics.json wordcloud.png
+all: funders.json funded_works.json funded_topics.json wordcloud.png
 clean:
-	rm -f au_funders.json au_funded_works.json au_funded_topics.json wordcloud.png
+	rm -f funders.json funded_works.json funded_topics.json wordcloud.png
 
 .PHONY: all clean
