--- a/examples/what_topic_does_AU_funders_fund_in_2025/Makefile
+++ b/examples/what_topic_does_AU_funders_fund_in_2025/Makefile
@@ -1,5 +1,5 @@
 funders.json:
-	pyalex funders --country AU --sample 5 --json $@
+	pyalex funders --country AU --limit 5 --json $@
 
 funded_works.json: funders.json
 	cat funders.json | jq 'map(.id) | unique | join(",")' | xargs pyalex works --json $@ --year 2025 --all --funder-ids
