--- a/examples/how_does_topic_of_arc_funded_projects_evolve/Makefile
+++ b/examples/how_does_topic_of_arc_funded_projects_evolve/Makefile
@@ -1,2 +1,2 @@
 works.json:
-	pyalex works --funder-ids F4320334704 --all --json works.json
+	pyalex -d works --funder-ids F4320334704 --all --json works.json # ARC funded projects
