--- a/examples/how_does_topic_of_arc_funded_projects_evolve/Makefile
+++ b/examples/how_does_topic_of_arc_funded_projects_evolve/Makefile
@@ -1,2 +1,4 @@
 works.json:
-	pyalex -d works --funder-ids F4320334704 --all --json works.json # ARC funded projects
+	pyalex works --funder-ids F4320334704 --year 2025 --json works.json --select 'id,primary_topic'
+
+# cat works.json| jq '[.[].primary_topic.display_name]' > topics.json
