--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12"
 ]
 license = {text = "MIT"}
-dependencies = ["requests", "urllib3", "typer", "prettytable", "pydantic>=2.0", "tqdm"]
+dependencies = ["requests", "urllib3", "typer", "prettytable", "rich", "aiohttp", "asyncio"]
 dynamic = ["version"]
 requires-python = ">=3.8"
 
