--- a/examples/how_does_topic_of_arc_funded_projects_evolve/Makefile
+++ b/examples/how_does_topic_of_arc_funded_projects_evolve/Makefile
@@ -1,4 +1,3 @@
 works.json:
-	pyalex works --funder-ids F4320334704 --year 2025 --json works.json --select 'id,primary_topic'
+	pyalex works --funder-ids F4320334704 --year 2025 --json works.json --all --select 'id,primary_topic'
 
-# cat works.json| jq '[.[].primary_topic.display_name]' > topics.json
