--- a/examples/what_topic_does_AU_funders_fund_in_2025/Makefile
+++ b/examples/what_topic_does_AU_funders_fund_in_2025/Makefile
@@ -1,17 +1,14 @@
 funders.json:
-	pyalex funders --country AU --limit 5 --json funders.json
+	pyalex funders --country AU --sample 5 --seed 1 --json funders.json
 
 %_works.json: funders.json
-	cat funders.json | jq 'map(.id) | unique | join(",")' | xargs pyalex works --json $@ --year $* --all --funder-ids
+	cat $< | jq 'map(.id) | unique | join(",")' | xargs pyalex works --json $@ --year $* --all --funder-ids
 
-topics.json: works.json
-	cat works.json | jq '.[].primary_topic.display_name' > topics.json
+%_topics.json: %_works.json
+	cat $< | jq '[.[].primary_topic.display_name]' > $*_topics.json
 
-wordcloud.png: topics.json
-	wordcloud_cli --text topics.json --imagefile wordcloud.png --width 800 --height 400 --background white --max_words 100
-
-all: funders.json works.json topics.json wordcloud.png
 clean:
-	rm -f funders.json works.json topics.json wordcloud.png
+	rm -f *_topics.json
 
-.PHONY: all clean
+.PHONY: clean
+.PRECIOUS: %_works.json %_topics.json
