fix some problem with batched query

--- a/examples/what_topic_does_AU_funders_fund_in_2025/Makefile
+++ b/examples/what_topic_does_AU_funders_fund_in_2025/Makefile
@@ -1,5 +1,5 @@
 funders.json:
-	pyalex funders --country AU --sample 5 --seed 1 --json funders.json
+	pyalex funders --country AU --all --json funders.json
 
 %_works.json: funders.json
 	cat $< | jq 'map(.id) | unique | join(",")' | xargs pyalex works --json $@ --year $* --all --funder-ids
@@ -7,8 +7,11 @@ funders.json:
 %_topics.json: %_works.json
 	cat $< | jq '[.[].primary_topic.display_name]' > $*_topics.json
 
+%_keywords.json: %_works.json
+	cat $< | jq '[.[].keywords[]]' > $*_keywords.json
+	
 clean:
-	rm -f *_topics.json
+	rm -f *_topics.json *_keywords.json
 
 .PHONY: clean
-.PRECIOUS: %_works.json %_topics.json
+.PRECIOUS: %_works.json %_topics.json %_keywords.json
