--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,4 +44,4 @@ force-single-line = true
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
-addopts = "-v -W error"
+addopts = "-v -W error --ignore=tests/slow"
