--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,25 +8,26 @@ readme = "README.md"
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12"
 ]
 license = {text = "MIT"}
 dependencies = [
-    "requests",
- "urllib3",
- "typer",
- "prettytable",
- "rich",
- "aiohttp",
- "asyncio",
- "httpx>=0.28.1",
+    "typer",
+    "prettytable",
+    "rich",
+    "httpx[http2]>=0.28.1",
+    "jupyter>=1.1.1",
+    "python-dotenv>=0.19.0",
+    "mkdocstrings[python]>=0.26.1",
+    "mkdocstrings-python>=1.11.1",
+    "markdown-include>=0.8.1",
+    "mkdocs-material>=9.6.22",
+    "embedding-atlas>=0.10.0",
 ]
 dynamic = ["version"]
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 
 [project.scripts]
 pyalex = "pyalex.cli:app"
@@ -34,6 +35,13 @@ pyalex = "pyalex.cli:app"
 [project.optional-dependencies]
 lint = ["ruff"]
 test = ["pytest", "pytest-xdist", "dotenv"]
+docs = [
+    "mkdocs>=1.5.0",
+    "mkdocs-material>=9.4.0",
+    "mkdocstrings[python]>=0.24.0",
+    "mkdocs-gen-files>=0.5.0",
+    "mkdocs-literate-nav>=0.6.0",
+]
 
 [build-system]
 build-backend = 'setuptools.build_meta'
