--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "mkdocs-material>=9.6.22",
     "embedding-atlas>=0.10.0",
     "anywidget>=0.9.18",
+    "pydantic>=2.0.0",
 ]
 dynamic = ["version"]
 requires-python = ">=3.10"
