--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,2 +1,5 @@
-works-2025.json:
-	pyalex works --year 2025  --has-abstract --limit 50
+ai2025.jsonl:
+	pyalex works --year 2025 --has-abstract --limit 50 --subfield-ids 1702 --select "title_abstract" --jsonl-file ai2025.jsonl
+
+ai2024.jsonl:
+	pyalex works --year 2024 --has-abstract --limit 50 --subfield-ids 1702 --select "title_abstract" --jsonl-file ai2024.jsonl
