--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ dependencies = [
     "pydantic>=2.0.0",
     "fastmcp>=2.12.5",
     "ruff>=0.14.1",
+    "langchain>=0.2.10",
+    "langgraph>=0.2.20",
+    "langchain-openai>=1.0.2",
 ]
 dynamic = ["version"]
 requires-python = ">=3.10"
