--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "langchain>=0.2.10",
     "langgraph>=0.2.20",
     "langchain-openai>=1.0.2",
+    "jsonlines>=4.0.0",
 ]
 dynamic = ["version"]
 requires-python = ">=3.10"
