--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12, <3.14"
 dependencies = [
+    "fitz>=0.0.1.dev2",
     "httpx[http2]>=0.28.1",
     "ipython>=9.7.0",
     "jupyter>=1.1.1",
@@ -19,6 +20,7 @@ dependencies = [
     "pydantic>=2.12.4",
     "pymupdf4llm>=0.2.9",
     "scikit-learn>=1.7.2",
+    "streamlit>=1.53.0",
     "treelib>=1.8.0",
     "typer>=0.20.0",
     "umap-learn>=0.5.0",
@@ -30,3 +32,8 @@ pyalex = "pyalex.cli:app"
 
 [tool.setuptools]
 packages = ["pyalex"]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+]
