--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12, <3.14"
 dependencies = [
+    "fastmcp>=2.14.4",
     "fitz>=0.0.1.dev2",
     "httpx[http2]>=0.28.1",
     "ipython>=9.7.0",
