update cli panel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "jupyter>=1.1.1",
     "langchain>=1.0.8",
     "langchain-openai>=1.0.3",
+    "langextract>=1.1.1",
     "langgraph>=1.0.3",
     "matplotlib>=3.10.7",
     "networkx>=3.5",
@@ -20,6 +21,7 @@ dependencies = [
     "prettytable>=3.17.0",
     "pydantic>=2.12.4",
     "pymupdf4llm>=0.2.9",
+    "rustworkx[all]>=0.17.1",
     "scikit-learn>=1.7.2",
     "streamlit>=1.53.0",
     "treelib>=1.8.0",
