--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12, <3.14"
 dependencies = [
+    "docling>=1.11.0",
     "fastmcp>=2.14.4",
     "fitz>=0.0.1.dev2",
     "httpx[http2]>=0.28.1",
@@ -15,6 +16,7 @@ dependencies = [
     "langextract>=1.1.1",
     "langgraph>=1.0.3",
     "matplotlib>=3.10.7",
+    "mlx-vlm>=0.3.1",
     "networkx>=3.5",
     "pandas>=2.3.3",
     "plotly>=6.5.0",
